force-app/main/default/objects/Property_SalesAI_Settings__c/Property_SalesAI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Property Sales.AI Settings</label>
</CustomObject>