force-app/main/default/objects/Property_SalesAI_Settings__c/fields/AutomaticUpdate__c.field-meta.xml
<CustomField>
    <fullName>AutomaticUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutomaticUpdate</label>
    <type>Checkbox</type>
</CustomField>