force-app/main/default/objects/Property_SalesAI_Settings__c/fields/IsSetupComplete__c.field-meta.xml
<CustomField>
    <fullName>IsSetupComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean that is set to true only when the required fields above are populated by the UX</description>
    <label>IsSetupComplete</label>
    <type>Checkbox</type>
</CustomField>