force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address_City__c</fullName>
    <label>Lead Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>