force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address_PostalCode__c</fullName>
    <description>What field to use the postalcode to match against</description>
    <label>Lead Address PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>