force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_Address_State__c</fullName>
    <description>What field to use to retrieve the state to match against</description>
    <label>Lead Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>