force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_History_Duration__c.field-meta.xml
<CustomField>
    <fullName>Lead_History_Duration__c</fullName>
    <description>To define the scope of Leads to query, this number is the # of days, in the past, we want to query the LastModifiedDate and/or CreatedDate</description>
    <label>Lead History Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>