force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Types__c</fullName>
    <description>A comma separated list of 1 or more Lead Record Types</description>
    <label>Lead Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>