force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_2__c</fullName>
    <label>Lead Status 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>