force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>To define the scope of Leads to query, this is the 1 or more lead status to include. A comma separated list of Lead.Status picklist values</description>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>