force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead_Reason__c</fullName>
    <description>When a Lead match is found, what &quot;lead reason&quot; to populate</description>
    <label>Matched Lead Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>