force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Lead_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead_Reason_Field__c</fullName>
    <description>When a Lead match is found, what Lead field to also update the Reason</description>
    <label>Matched Lead Reason Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>