force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lead_Status__c</fullName>
    <description>When a Lead match is found, what is the lead.status to update</description>
    <label>Matched Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>