force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Opportunity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Matched_Opportunity_Reason__c</fullName>
    <description>When an Opportunity match is found, what is the lost reason to populate</description>
    <label>Matched Opportunity Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>