force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Opportunity_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Matched_Opportunity_Reason_Field__c</fullName>
    <description>When an Opportunity match is found, what is the Opportunity field to update the lost reason</description>
    <label>Matched Opportunity Reason Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>