force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matched_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Matched_Opportunity_Stage__c</fullName>
    <description>When an Opportunity match is found, what is the opportunity.stagename value to update</description>
    <label>Matched Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>