force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Matching_Day__c.field-meta.xml
<CustomField>
    <fullName>Matching_Day__c</fullName>
    <description>Day of the week that the matching logic will run</description>
    <label>Matching Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>