force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Opportunity_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Address_Street__c</fullName>
    <description>What field to use to retrieve the street address to match against</description>
    <label>Opportunity Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>