force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Opportunity_Advanced_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Advanced_SOQL__c</fullName>
    <description>If customer wants to do non-standard filters, this is a place to enter SOQL compliant text to be used in the WHERE clause</description>
    <label>Opportunity Advanced SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>