force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Opportunity_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Types__c</fullName>
    <description>A comma separated list of 1 or more Opportunity Record Types</description>
    <label>Opportunity Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>