force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Opportunity_Stage_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_2__c</fullName>
    <label>Opportunity Stage 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>