force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>To define the scope of Opportunities to query, this is the 1 or more Opportunity Stage(s) to include. A comma separated list of Opportunity.StageName picklist values</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>