force-app/main/default/objects/Property_SalesAI_Settings__c/fields/Property_Sales_History_Duration__c.field-meta.xml
<CustomField>
    <fullName>Property_Sales_History_Duration__c</fullName>
    <description>To define the scope of Property Sales.AI records to include in the matching logic, this number is the # of days in the past (based on the property sold date) we want to query.</description>
    <label>Property Sales History Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>